Chatbot overflow fixed

--- a/home.css
+++ b/home.css
@@ -2,8 +2,10 @@
 
 body {
   height: 100vh;
+  max-height: 100vh;
   background-color: #96DB37;
   background: linear-gradient(#BBD09E 0%, rgba(150, 219, 55, .8) 100%);
+  overflow-y: none;
 }
 
 
@@ -96,6 +98,7 @@ body {
 .chatbot-form {
     width: 100%;
     height: 90%;
+    max-height: 500px;
 
     padding: 10px;
 
@@ -104,6 +107,11 @@ body {
     justify-content: end;
 
     /* border: solid 3px white; */
+
+    resize: none;
+
+    overflow: hidden;
+    scroll-behavior: smooth;
 }
 
 .chat-field {
@@ -323,7 +331,7 @@ background-color: lightgreen;
 #chat-messages {
     width: 100%;
     height: 200px; 
-    overflow-y: auto;
+    overflow-y: scroll;
     margin-top: 10px;
     padding: 10px;
     background-color: rgba(255, 255, 255, 0.6);
